[project]
name = "nba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.0.3",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "m3u8>=6.0.0",
    "playwright>=1.48.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
    "requests>=2.32.4",
]

[project.scripts]
nba = "nba:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
